--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@heroicons/react": "^1.0.6",
     "axios": "^0.27.2",
     "react": "^18.0.0",
+    "react-chartjs-2": "^4.3.1",
     "react-date-range": "^1.4.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.33.0",
     "react-query": "^3.39.1",
     "react-router-dom": "^6.3.0",
     "react-spinners": "^0.12.0",
+    "react-stars": "^2.2.5",
     "react-toastify": "^9.0.5",
     "zustand": "^4.0.0-rc.1"
   },
@@ -25,6 +27,7 @@
     "@types/react": "^18.0.0",
     "@types/react-date-range": "^1.4.3",
     "@types/react-dom": "^18.0.0",
+    "@types/react-stars": "^2.2.1",
     "@vitejs/plugin-react": "^1.3.0",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
